{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 123,
  "lineage": "7831253a-33eb-12d3-df28-9fb87e5ef3ed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_terraform_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:443093484255:instance/i-0541acac2dd39b5a3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0541acac2dd39b5a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03c2af57aec4e2986",
            "private_dns": "ip-10-0-1-86.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.86",
            "public_dns": "ec2-54-198-175-116.compute-1.amazonaws.com",
            "public_ip": "54.198.175.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-022c787a3215b631d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015cb80fb823defa5",
            "tags": {
              "Name": "aws_terraform_ec2"
            },
            "tags_all": {
              "Name": "aws_terraform_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04a81166078a2eaf1"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws_terraform_key_pair",
            "aws_security_group.aws_terraform_sg",
            "aws_subnet.aws_terraform_subnet",
            "aws_vpc.aws_terraform_vpc",
            "data.aws_ami.aws_terraform_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_terraform_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443093484255:internet-gateway/igw-08efc733720a771a5",
            "id": "igw-08efc733720a771a5",
            "owner_id": "443093484255",
            "tags": {
              "Name": "aws_terraform_gw"
            },
            "tags_all": {
              "Name": "aws_terraform_gw"
            },
            "vpc_id": "vpc-037011ee3d5778469"
          },
          "dependencies": [
            "aws_vpc.aws_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "aws_terraform_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08efc733720a771a5",
            "id": "r-rtb-05d52e3ea5ba377b11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d52e3ea5ba377b1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws_terraform_gw",
            "aws_route_table.aws_terraform_rtb",
            "aws_vpc.aws_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws_terraform_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443093484255:route-table/rtb-05d52e3ea5ba377b1",
            "id": "rtb-05d52e3ea5ba377b1",
            "owner_id": "443093484255",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aws_terraform_rtb"
            },
            "tags_all": {
              "Name": "aws_terraform_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-037011ee3d5778469"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws_terraform_rtb_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04912a8d0a21fac90",
            "route_table_id": "rtb-05d52e3ea5ba377b1",
            "subnet_id": "subnet-015cb80fb823defa5"
          },
          "dependencies": [
            "aws_route_table.aws_terraform_rtb",
            "aws_subnet.aws_terraform_subnet",
            "aws_vpc.aws_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_terraform_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443093484255:security-group/sg-04a81166078a2eaf1",
            "description": "aws terraform security group",
            "egress": [],
            "id": "sg-04a81166078a2eaf1",
            "ingress": [],
            "name": "aws_terraform_sg",
            "name_prefix": "",
            "owner_id": "443093484255",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-037011ee3d5778469"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_terraform_sgr_https_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3032945343",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04a81166078a2eaf1",
            "security_group_rule_id": "sgr-033a198777fbbe2c7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_terraform_sg",
            "aws_vpc.aws_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_terraform_sgr_out_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-285493931",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04a81166078a2eaf1",
            "security_group_rule_id": "sgr-062ff2f04a61efcc0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_terraform_sg",
            "aws_vpc.aws_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_terraform_sgr_ssh_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2617521223",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04a81166078a2eaf1",
            "security_group_rule_id": "sgr-0ed1d5fb8cdc45860",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_terraform_sg",
            "aws_vpc.aws_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_terraform_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443093484255:subnet/subnet-015cb80fb823defa5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015cb80fb823defa5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "443093484255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_terraform_subnet_pub"
            },
            "tags_all": {
              "Name": "aws_terraform_subnet_pub"
            },
            "vpc_id": "vpc-037011ee3d5778469"
          },
          "dependencies": [
            "aws_vpc.aws_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443093484255:vpc/vpc-037011ee3d5778469",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0db31fa1f8f450a49",
            "default_route_table_id": "rtb-00510fcae3c6968ff",
            "default_security_group_id": "sg-014efc30d00d802a4",
            "dhcp_options_id": "dopt-88bb56f2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-037011ee3d5778469",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00510fcae3c6968ff",
            "owner_id": "443093484255",
            "tags": {
              "Name": "aws_terraform_vpc"
            },
            "tags_all": {
              "Name": "aws_terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}